feat: login service and refresh

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 DATABASE_URL=mongodb://127.0.0.1:27017/DATABASENAME
+JWT_SECRET=mysecret
+JWT_EXPIRATION_TIME=60m
+REFRESH_TOKEN_SECRET=myrefreshsecret
+REFRESH_TOKEN_EXPIRATION_TIME=1d
