--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^7.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
